fix: adjust autofill handle position to avoid overflow clip
Remove negative margins from autofill drag handle and use
bottom/right: -1px instead, keeping it within the clippable
area of gs-tabular-inner while remaining visually on the cell
corner.

--- a/packages/core/src/styles/cell.less
+++ b/packages/core/src/styles/cell.less
@@ -117,10 +117,8 @@
     position: absolute;
     width: 7px;
     height: 7px;
-    bottom: 0;
-    right: 0;
-    margin-right: -3.5px;
-    margin-bottom: -3.5px;
+    bottom: -1px;
+    right: -1px;
     cursor: crosshair;
     z-index: 1;
   }
